cloud/kubernetes/contconn-namespace-01.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contconn-namespace-01

# kubectl create -f contconn-namespace-01.yaml
# imperative mode: kubectl create namespace tauro-namespace
