cloud/kubernetes/contconn-namespace-02.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contconn-namespace-02

# kubectl create -f contconn-namespace-02.yaml
# imperative mode: kubectl create namespace tauro-namespace
