cloud/kubernetes/contconn-02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contconn-deployment-02
  namespace: contconn-namespace-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contconn-label-02
  template:
    metadata:
      labels:
        app: contconn-label-02
    spec:
      containers:
        - name: contconn-container-02
          image: lmldocker/contconn:1.0
          ports:
          - containerPort: 8321
---
apiVersion: v1
kind: Service
metadata:
  name: contconn-service-02
  namespace: contconn-namespace-01
spec:
  type: NodePort
  selector:
    app: contconn-label-02
  ports:
    - protocol: TCP
      port: 8321
      targetPort: 8321


# kubectl apply -f contconn-02.yaml
# kubectl delete -f contconn-02.yaml
