cloud/kubernetes/contconn-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contconn-deployment-04
  namespace: contconn-namespace-02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contconn-label-04
  template:
    metadata:
      labels:
        app: contconn-label-04
    spec:
      containers:
        - name: contconn-container-04
          image: lmldocker/contconn:1.0
          ports:
          - containerPort: 8321
---
apiVersion: v1
kind: Service
metadata:
  name: contconn-service-04
  namespace: contconn-namespace-02
spec:
  type: NodePort
  selector:
    app: contconn-label-04
  ports:
    - protocol: TCP
      port: 8321
      targetPort: 8321


# kubectl apply -f contconn-01.yaml
# kubectl delete -f contconn-01.yaml
