cloud/kubernetes/contconn-05.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contconn-deployment-05
  namespace: contconn-namespace-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contconn-label-05
  template:
    metadata:
      labels:
        app: contconn-label-05
    spec:
      containers:
        - name: contconn-container-05
          image: lmldocker/contconn:1.0
          ports:
          - containerPort: 8321
---
apiVersion: v1
kind: Service
metadata:
  name: contconn-service-05
  namespace: contconn-namespace-01
spec:
  type: ClusterIP
  selector:
    app: contconn-label-05
  ports:
    - protocol: TCP
      port: 8321
      targetPort: 8321


# kubectl apply -f contconn-01.yaml
# kubectl delete -f contconn-01.yaml
