cloud/kubernetes/contconn-ingress-01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contconn-ingress-01
  namespace: contconn-namespace-01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: contconn.info
      http:
        paths:
          - path: /contconn1/(.+)
            pathType: Prefix
            backend:
              service:
                name: contconn-service-01
                port:
                     number: 8321

# kubectl apply -f contconn-ingress-01.yaml
# kubectl delete -f contconn-ingress-01.yaml
